--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <!-- Progress dialog text for loading, recording, or saving... -->
     <string name="progress_dialog_loading">Loading…</string>
     <string name="progress_dialog_recording">Recording…</string>
-    <string name="progress_dialog_saving">Saving…</string>
+    <string name="progress_dialog_saving">Uploading…</string>
     <string name="progress_dialog_cancel">Cancel</string>
     <string name="progress_dialog_stop">Stop</string>
 
