--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,9 +123,9 @@
     <string name="default_notification_success_message">Changed default notification sound</string>
     <string name="play_error">Unable to play this media file</string>
     <string name="no_unique_filename">Unable to find unique filename</string>
-    <string name="record_error">Error recording audio</string>
+    <string name="record_error">Error recording audio, permission required.</string>
     <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
-    <string name="write_error">Error writing file</string>
+    <string name="write_error">Error writing file, storage permission required.</string>
     <string name="read_error">Error reading file</string>
 
     <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
@@ -146,5 +146,5 @@
 
     <string name="about_title">About Ringdroid</string>
     <string name="about_text"><![CDATA[Use Ringdroid to edit MP3, OGG, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications from them.\n\nTip: copy audio files to your SD card using a USB cable.\n\nTip: tap anywhere on the waveform to start playing at that position.\n\nTip: while playing, tap the word Start or End to quickly set the start and end markers to the current playback time.\n\nVersion %s\n\nDeveloper: Dominic Mazzoni, Nicolas Faralli\nGraphics: Joseph Wain\nSupport and evangelizing: Eugene Koh\nEnhancements: Dan Klufas\n\nRingdroid is free software, distributed under the Apache 2.0 license.  Source code is on github.com/google/ringdroid\n]]></string>
-
+    <string name="hint_networkError">Please check your connection and try again.</string>
 </resources>
